--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
             <!-- Event Card 1: HackVerse -->
             <div class="event-card" data-event="hackverse">
                 <div class="event-card-content">
-                    <h2 class="event-name">HackVerse</h2>
+                    <h2 class="event-name">BugWarz</h2>
                     <button class="event-details-btn" onclick="navigateToEvent('hackverse')">
                         View Details
                     </button>
@@ -97,7 +97,7 @@
             <!-- Event Card 5: Rodei Hunt -->
             <div class="event-card" data-event="rodeihunt">
                 <div class="event-card-content">
-                    <h2 class="event-name">Rodei Hunt</h2>
+                    <h2 class="event-name">Rodeo Hunt</h2>
                     <button class="event-details-btn" onclick="navigateToEvent('rodeihunt')">
                         View Details
                     </button>
