--- a/events/hackverse.html
+++ b/events/hackverse.html
@@ -32,7 +32,7 @@
     <main class="event-detail-main">
         <div class="event-detail-container">
             <div class="event-detail-content">
-                <h2 class="event-detail-name">HackVerse</h2>
+                <h2 class="event-detail-name">BugWarz</h2>
                 <p class="event-detail-description">
                     HackVerse is an innovative hackathon event that brings together creative minds to build 
                     cutting-edge solutions. Participants will work in teams to develop projects that address 
