--- a/index.html
+++ b/index.html
@@ -99,20 +99,21 @@
                         <li>Registration is free and open only to students from Computer Science, Computer Applications, Data Science, IT, Mathematics, Statistics and departments related to the aforementioned.</li>
                         <li>Only one team from a department can participate in each event. Participants may take part in up to two events, provided there are no timing conflicts.</li>
                         <li>It is mandatory that all participants bring their College ID and Bonafide Certificate from their HoD/Principal.</li>
-                        <li>Online Registration closes on 04-12-2025 at 04:00 P.M. ON-SPOT Registration starts from 07:00 A.M to 08:30 A.M, Venue: MCA BLOCK Ground Floor.</li>
+                        <li>Online Registration closes on 03-12-2025 at 04:00 P.M. ON-SPOT Registration is from 07:00 A.M to 08:30 A.M at MCA BLOCK Ground Floor.</li>
                         <li>All participants, even those registered online, must report to the On-Spot Registration Desk to collect their participation card. Failure to do so will result in cancellation of registration.</li>
                         <li>No participants will be allowed inside the college after 08:15 A.M as the college gates will be closed.</li>
-                        <li>Participants if once went outside the college premises will not be allowed inside again.</li>
-                        <li>Participants have to make their own arrangements for Lunch and Refreshments. The College Canteen will be open on the day.</li>
+                        <li>Participants who leave the college premises will not be allowed inside again.</li>
+                        <li>Participants must make their own arrangements for Lunch and Refreshments. The College Canteen will be open on the day.</li>
+                        <li>Please do not bring any food items into the lab or classroom. We cannot be held responsible for any valuable items.</li>
                         <li>Dress Code:
                             <ul>
-                                <li><strong>Boys</strong> - Formal Shirts/Collared T-Shirts, Full Pant (Round Neck T-Shirts, Torn Jeans, Hoodie are not allowed).</li>
-                                <li><strong>Girls</strong> - Formal Dress (Short Tops, Torn Jeans, Round Neck T-Shirts are not allowed).</li>
+                                <li>a. Boys – Formal Shirts/Collared T-Shirts, Full Pants (Round Neck T-Shirts, Torn Jeans, Hoodies are not allowed).</li>
+                                <li>b. Girls – Formal Dress (Short Tops, Torn Jeans, Round Neck T-Shirts are not allowed).</li>
                             </ul>
                         </li>
                         <li>Non-compliance with the time limit, rules, and code of conduct will result in immediate disqualification.</li>
                         <li>Decisions of the Judges are final and binding.</li>
-                        <li>The announcement of Results and Prize Distribution will be held only during the Valedictory Function (03:00 P.M).</li>
+                        <li>Announcement of Results and Prize Distribution will be held only during the Valedictory Function (03:00 P.M).</li>
                     </ol>
                     <div class="contact-info">
                         <p><strong>For further queries, contact:</strong></p>
