--- a/events/datawear.html
+++ b/events/datawear.html
@@ -144,9 +144,10 @@
             <div class="event-detail-content">
                 <h2 class="event-detail-name">DataWear</h2>
                 <p class="event-detail-description">
-                    DataWear is a unique event focused on wearable technology and data integration. 
-                    Explore the intersection of fashion, technology, and data science by creating innovative 
-                    wearable devices that collect and analyze real-time data.
+                    DataWear - Unleash your imagination in this on-spot T-shirt painting challenge where creativity meets pure originality. 
+                    With only your brushes, paints, and a blank tee, you must transform the theme into a bold visual story—no references, no tracing, just raw artistic skill. 
+                    Every stroke counts as judges look for creativity, visual impact, and meaningful expression. It’s a test of vision, technique, and authenticity under strict time and material rules. 
+                    Step in, paint with passion, and let your art speak louder than words!
                 </p>
                 
                 <div class="event-rules-section">
@@ -156,8 +157,8 @@
                     <ol class="rules-list">
                         <li>Two participants per team.</li>
                         <li>The artwork must be relevant to the theme, which will be announced on the spot.</li>
-                        <li>Participants must bring their own materials, including a plain white T-shirt (size L), fabric or acrylic paints, glitters, brushes, a mixing plate, pencil, pen, and eraser.</li>
-                        <li>Usage of any pictorial reference, ready-made stickers and other materials is strictly prohibited.</li>
+                        <li>Participants must bring their own materials, including a plain white/black T-shirt (size L), fabric or acrylic paints, glitters, brushes, a mixing plate, pencil, pen, and eraser.</li>
+                        <li>Usage of any pictorial reference, ready-made stickers, and other materials is strictly prohibited.</li>
                         <li>Tracing or copying in any form is not allowed.</li>
                         <li><strong>Evaluation Criteria:</strong>
                             <ul>
@@ -167,7 +168,8 @@
                                 <li>Effectiveness in Expressing the Theme</li>
                             </ul>
                         </li>
-                        <li>Usage of mobile phones, smartwatches, and bluetooth devices is strictly prohibited during the competition.</li>
+                        <li>Usage of mobile phones, smartwatches, and Bluetooth devices is strictly prohibited during the competition.</li>
+                        <li>Paintings containing vulnerabilities will be eliminated.</li>
                     </ol>
                     
                     <div class="contact-info">
