--- a/events.html
+++ b/events.html
@@ -25,7 +25,11 @@
             <!-- TR Logo (Left) -->
             <div class="events-logo-left">
                 <a href="index.html" class="logo-link">
-                    <div class="events-logo-text">HOME</div>
+                    <div class="home-icon-wrapper">
+                        <svg class="home-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M3 12L5 10M5 10L12 3L19 10M5 10V20C5 20.5523 5.44772 21 6 21H9M19 10L21 12M19 10V20C19 20.5523 18.5523 21 18 21H15M9 21C9.55228 21 10 20.5523 10 20V16C10 15.4477 10.4477 15 11 15H13C13.5523 15 14 15.4477 14 16V20C14 20.5523 14.4477 21 15 21M9 21H15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                 </a>
             </div>
 
@@ -36,15 +40,15 @@
 
             <!-- Menu Icon (Right) -->
             <div class="events-menu-right">
-                <div style="display: flex; gap: 1rem; align-items: center;">
+                <div class="events-nav-menu">
                     <div class="user-menu" style="display: none;">
-                        <a href="dashboard.html" style="color: var(--primary-blue); text-decoration: none; font-family: 'Rajdhani', sans-serif; font-weight: 600; font-size: 0.9rem;">Dashboard</a>
-                        <a href="admin.html" style="color: var(--primary-blue); text-decoration: none; font-family: 'Rajdhani', sans-serif; font-weight: 600; font-size: 0.9rem; margin-left: 1rem;">Admin</a>
-                        <button onclick="logoutUser(); window.location.reload();" style="background: transparent; border: 2px solid var(--primary-blue); color: var(--primary-blue); padding: 0.4rem 0.8rem; border-radius: 20px; cursor: pointer; font-family: 'Rajdhani', sans-serif; font-weight: 600; font-size: 0.9rem; margin-left: 1rem;">Logout</button>
+                        <a href="dashboard.html" class="nav-link">Dashboard</a>
+                        <a href="admin.html" class="nav-link">Admin</a>
+                        <button onclick="logoutUser(); window.location.reload();" class="nav-button">Logout</button>
                     </div>
                     <div class="login-links">
-                        <a href="login.html" class="login-link" style="color: var(--primary-blue); text-decoration: none; font-family: 'Rajdhani', sans-serif; font-weight: 600; font-size: 0.9rem;">Login</a>
-                        <a href="register-user.html" class="register-link" style="color: var(--primary-blue); text-decoration: none; font-family: 'Rajdhani', sans-serif; font-weight: 600; font-size: 0.9rem; margin-left: 1rem;">Register</a>
+                        <a href="login.html" class="nav-link">Login</a>
+                        <a href="register-user.html" class="nav-link">Register</a>
                     </div>
                 </div>
             </div>
