--- a/events/rodeihunt.html
+++ b/events/rodeihunt.html
@@ -187,7 +187,7 @@
                 </div>
                 
                 <button class="register-event-btn" onclick="window.location.href='../register.html?event=rodeihunt'">
-                    Register for Rodei Hunt
+                    Register for Rodeo Hunt
                 </button>
             </div>
         </div>
