--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     <div class="contact-info">
                         <p><strong>For further queries, contact:</strong></p>
                         <p>Florina A - 9043183343</p>
+                        <p>K.A.Madhumita - 9884603757</p>
                     </div>
                 </div>
             </div>
