--- a/events/hackverse.html
+++ b/events/hackverse.html
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <button class="register-event-btn" onclick="window.location.href='../register.html?event=hackverse'">
-                    Register for HackVerse
+                    Register for BugWarz
                 </button>
             </div>
         </div>
