--- a/events.html
+++ b/events.html
@@ -58,11 +58,11 @@
     <!-- Events Grid Section -->
     <main class="events-main">
         <div class="events-container">
-            <!-- Event Card 1: HackVerse -->
-            <div class="event-card" data-event="hackverse">
+            <!-- Event Card 1: BugWarz -->
+            <div class="event-card" data-event="bugwarz">
                 <div class="event-card-content">
                     <h2 class="event-name">BugWarz</h2>
-                    <button class="event-details-btn" onclick="navigateToEvent('hackverse')">
+                    <button class="event-details-btn" onclick="navigateToEvent('bugwarz')">
                         View Details
                     </button>
                 </div>
