--- a/events/bugwarz.html
+++ b/events/bugwarz.html
@@ -153,7 +153,7 @@
                     Teams battle through a sharp MCQ round before the top contenders enter the ultimate debugging arena.
                     With Python as their weapon, participants race against time to outsmart tricky code traps. 
                     Only the sharpest minds who can spot, fix, and optimize under pressure will claim victory. 
-                    Step in, decode the chaos, and conquer the bugs!
+                    Step in, decode the chaos, and conquer the bugs!
                 </p>
                 
                 <div class="event-rules-section">
@@ -179,7 +179,7 @@
                         <p>Kevin Jesu – 6381501885</p>
                     </div>
                 </div>
-                <button class="register-event-btn" onclick="window.location.href='../register.html?event=hackverse'">
+                <button class="register-event-btn" onclick="window.location.href='../register.html?event=bugwarz'">
                     Register for BugWarz
                 </button>
             </div>
