--- a/register.html
+++ b/register.html
@@ -39,6 +39,8 @@
                 <form id="registrationForm" class="registration-form">
                     <!-- Event Name (Hidden, auto-filled from URL) -->
                     <input type="hidden" id="eventName" name="eventName" value="">
+                    <!-- Event Field for Google Forms (Hidden) -->
+                    <input type="hidden" id="eventFieldGoogleForms" name="entry.553851024" value="">
                     
                     <!-- College Name (Hidden if logged in) -->
                     <div class="form-group" id="collegeNameGroup" style="display: none;">
