--- a/events/iqverse.html
+++ b/events/iqverse.html
@@ -147,9 +147,10 @@
                     
                     <ol class="rules-list">
                         <li>Each team may consist of a maximum of 2 participants.</li>
-                        <li>The event will include 2 rounds – Preliminary and Final.</li>
+                        <li>The event will include 3 rounds – Preliminary, Intermediate and Final.</li>
                         <li>The questions will cover topics from Data Science, Computer Science, Statistics, and Mathematics.</li>
-                        <li>Top-performing teams from the Preliminary Round will qualify for the Final Round.</li>
+                        <li>Top-performing teams from the Preliminary Round will qualify for the Intermediate Round.</li>
+                        <li>The Qualified teams from the Intermediate Round will advance to the Final Round.</li>
                         <li>There will be no negative marks for incorrect or unanswered questions.</li>
                         <li>The use of mobile phones or smart devices is strictly prohibited during all rounds.</li>
                         <li>Time limits will be strictly enforced for each round.</li>
