--- a/events.html
+++ b/events.html
@@ -98,11 +98,11 @@
                 </div>
             </div>
 
-            <!-- Event Card 5: Rodei Hunt -->
-            <div class="event-card" data-event="rodeihunt">
+            <!-- Event Card 5: Rodeo Hunt -->
+            <div class="event-card" data-event="rodeohunt">
                 <div class="event-card-content">
                     <h2 class="event-name">Rodeo Hunt</h2>
-                    <button class="event-details-btn" onclick="navigateToEvent('rodeihunt')">
+                    <button class="event-details-btn" onclick="navigateToEvent('rodeohunt')">
                         View Details
                     </button>
                 </div>
