--- a/events/rodeohunt.html
+++ b/events/rodeohunt.html
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 
-                <button class="register-event-btn" onclick="window.location.href='../register.html?event=rodeihunt'">
+                <button class="register-event-btn" onclick="window.location.href='../register.html?event=rodeohunt'">
                     Register for Rodeo Hunt
                 </button>
             </div>
