--- a/register.html
+++ b/register.html
@@ -162,11 +162,11 @@
                             id="contactNumber" 
                             name="contactNumber" 
                             class="form-input" 
-                            placeholder="Enter your contact number (10-15 digits)"
+                            placeholder="Enter your contact number (10 digits)"
                             required
                             autocomplete="tel"
-                            pattern="[0-9]{10,15}"
-                            title="Please enter 10-15 digits only"
+                            pattern="[0-9]{10}"
+                            title="Please enter exactly 10 digits"
                         >
                         <span class="form-error" id="contactNumberError"></span>
                     </div>
