--- a/events.html
+++ b/events.html
@@ -102,7 +102,7 @@
             <div class="event-card" data-event="rodeihunt">
                 <div class="event-card-content">
                     <h2 class="event-name">Rodeo Hunt</h2>
-                    <button class="event-details-btn" onclick="navigateToEvent('rodeihunt')">
+                    <button class="event-details-btn" onclick="navigateToEvent('rodeohunt')">
                         View Details
                     </button>
                 </div>
