--- a/index.html
+++ b/index.html
@@ -500,6 +500,9 @@
             justify-content: center;
             align-items: center;
             animation: fadeIn 0.3s ease;
+            padding: 1rem;
+            box-sizing: border-box;
+            overflow-y: auto;
         }
 
         .modal-overlay.active {
@@ -508,10 +511,11 @@
 
         .modal-container {
             position: relative;
-            width: 70%;
-            max-width: 70%;
-            height: 80%;
-            max-height: 80%;
+            width: min(90%, 900px);
+            max-width: 900px;
+            height: auto;
+            max-height: 80vh;
+            margin: clamp(0.5rem, 2vw, 1.5rem);
             background: rgba(10, 14, 39, 0.95);
             border: 2px solid var(--primary-blue);
             border-radius: 20px;
@@ -555,7 +559,7 @@
         }
 
         .modal-content {
-            padding: 3rem;
+            padding: clamp(1.5rem, 4vw, 3rem);
             overflow-y: auto;
             overflow-x: hidden;
             flex: 1;
@@ -661,15 +665,15 @@
             }
 
             .modal-container {
-                width: 95%;
-                max-width: 95%;
-                height: 90vh;
-                max-height: 90vh;
-                margin: 1rem;
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+                max-height: 85vh;
+                margin: 0.75rem 0.25rem;
             }
 
             .modal-content {
-                padding: 2rem 1.5rem;
+                padding: 1.75rem 1.25rem;
             }
 
             .modal-title {
@@ -696,16 +700,16 @@
             }
 
             .modal-container {
-                width: 98%;
-                max-width: 98%;
-                height: 92vh;
-                max-height: 92vh;
-                margin: 0.5rem;
+                width: 100%;
+                max-width: 100%;
+                height: auto;
+                max-height: 90vh;
+                margin: 0.5rem 0.25rem;
                 border-radius: 15px;
             }
 
             .modal-content {
-                padding: 1.5rem 1rem;
+                padding: 1.4rem 0.9rem;
             }
 
             .modal-close {
@@ -743,14 +747,14 @@
             .modal-container {
                 width: 100%;
                 max-width: 100%;
-                height: 100vh;
-                max-height: 100vh;
-                margin: 0;
-                border-radius: 0;
+                height: auto;
+                max-height: 92vh;
+                margin: 0.25rem;
+                border-radius: 12px;
             }
 
             .modal-content {
-                padding: 1.25rem 0.9rem;
+                padding: 1.2rem 0.85rem;
             }
 
             .modal-close {
@@ -764,7 +768,7 @@
 
         @media (max-width: 375px) {
             .modal-content {
-                padding: 1rem 0.75rem;
+                padding: 1rem 0.7rem;
             }
 
             .modal-title {
@@ -787,7 +791,7 @@
 
         @media (max-width: 320px) {
             .modal-content {
-                padding: 0.9rem 0.6rem;
+                padding: 0.85rem 0.55rem;
             }
 
             .modal-close {
@@ -814,6 +818,21 @@
 
             .contact-info {
                 padding: 0.75rem;
+            }
+        }
+
+        @media (max-height: 700px) {
+            .modal-overlay {
+                align-items: flex-start;
+                padding-top: 1.25rem;
+            }
+
+            .modal-container {
+                max-height: 85vh;
+            }
+
+            .modal-close {
+                top: 0.6rem;
             }
         }
     </style>
