--- a/events/rodeohunt.html
+++ b/events/rodeohunt.html
@@ -162,7 +162,7 @@
                     
                     <ol class="rules-list">
                         <li>Two participants per team.</li>
-                        <li>The event comprises three rounds: Preliminary and Final.</li>
+                        <li>The event comprises two rounds: Preliminary and Final.</li>
                     </ol>
                     
                     <h3 class="round-heading">Preliminary Round (25 min):</h3>
