--- a/events/bugwarz.html
+++ b/events/bugwarz.html
@@ -157,7 +157,8 @@
                 </p>
                 
                 <div class="event-rules-section">
-                    <h2 class="rules-title">BugWarz - Rules</h2>
+                    <h2 class="rules-title">BugWarz - Debugging Rules</h2>
+                    <p class="event-timing"><strong>Timing:</strong> 10:30 A.M - 12:00 P.M</p>
                     
                     <h3 class="round-heading">Preliminary Round (MCQ Assessment)</h3>
                     <ul class="rules-list">
