--- a/events/rodeohunt.html
+++ b/events/rodeohunt.html
@@ -157,7 +157,7 @@
                 </p>
                 
                 <div class="event-rules-section">
-                    <h2 class="rules-title">Rodeo Hunt Rules</h2>
+                    <h2 class="rules-title">Rodeo Hunt - Treasure Hunt Rules</h2>
                     <p class="event-timing"><strong>Timing:</strong> 01:30 P.M - 02:30 P.M</p>
                     
                     <ol class="rules-list">
