--- a/events/viswiz.html
+++ b/events/viswiz.html
@@ -157,7 +157,7 @@
                 </p>
                 
                 <div class="event-rules-section">
-                    <h2 class="rules-title">Event Rules</h2>
+                    <h2 class="rules-title">VisWiz - Data Visualization Rules</h2>
                     <p class="event-timing"><strong>Timing:</strong> 10:00 A.M - 12:00 P.M</p>
                     
                     <ol class="rules-list">
