--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <li>Registration is free and open only to students from Computer Science, Computer Applications, Data Science, IT, Mathematics, Statistics and departments related to the aforementioned.</li>
                         <li>Only one team from a department can participate in each event. Participants may take part in up to two events, provided there are no timing conflicts.</li>
                         <li>It is mandatory that all participants bring their College ID and Bonafide Certificate from their HoD/Principal.</li>
-                        <li>Online Registration closes on 03-12-2025 at 04:00 P.M. ON-SPOT Registration is from 07:00 A.M to 08:30 A.M at MCA BLOCK Ground Floor.</li>
+                        <li>Online Registration closes on 03-12-2025 at 12:00 A.M. ON-SPOT Registration is from 07:00 A.M to 08:30 A.M at MCA BLOCK Ground Floor.</li>
                         <li>All participants, even those registered online, must report to the On-Spot Registration Desk to collect their participation card. Failure to do so will result in cancellation of registration.</li>
                         <li>No participants will be allowed inside the college after 08:15 A.M as the college gates will be closed.</li>
                         <li>Participants who leave the college premises will not be allowed inside again.</li>
