--- a/events/pitchstorm.html
+++ b/events/pitchstorm.html
@@ -153,7 +153,7 @@
                 
                 <div class="event-rules-section">
                     <h2 class="rules-title">PitchStorm - Shark Tank Rules</h2>
-                    <p class="event-timing"><strong>Timing:</strong> 10:45 A.M - 12:30 P.M</p>
+                    <p class="event-timing"><strong>Timing:</strong> 2:00 P.M - 3:30 P.M</p>
                     
                     <ol class="rules-list">
                         <li>Each team must have two participants and present an original tech-based business idea using a PPT.</li>
