--- a/events/profusion.html
+++ b/events/profusion.html
@@ -157,7 +157,7 @@
                 
                 <div class="event-rules-section">
                     <h2 class="rules-title">Profusion - Project Presentation Rules</h2>
-                    <p class="event-timing"><strong>Timing:</strong> 01:30 P.M - 02:30 P.M</p>
+                    <p class="event-timing"><strong>Timing:</strong> 10:00 A.M - 12:30 P.M</p>
                     
                     <ol class="rules-list">
                         <li>Maximum two participants per team.</li>
