--- a/events/rodeohunt.html
+++ b/events/rodeohunt.html
@@ -158,7 +158,7 @@
                 
                 <div class="event-rules-section">
                     <h2 class="rules-title">Rodeo Hunt - Treasure Hunt Rules</h2>
-                    <p class="event-timing"><strong>Timing:</strong> 01:30 P.M - 02:30 P.M</p>
+                    <p class="event-timing"><strong>Timing:</strong> 11:00 A.M - 12:00 P.M</p>
                     
                     <ol class="rules-list">
                         <li>Two participants per team.</li>
