--- a/events/viswiz.html
+++ b/events/viswiz.html
@@ -158,7 +158,7 @@
                 
                 <div class="event-rules-section">
                     <h2 class="rules-title">VisWiz - Data Visualization Rules</h2>
-                    <p class="event-timing"><strong>Timing:</strong> 10:00 A.M - 12:00 P.M</p>
+                    <p class="event-timing"><strong>Timing:</strong> 1:30 P.M - 2:30 P.M</p>
                     
                     <ol class="rules-list">
                         <li>Two participants per team.</li>
