--- a/events/viswiz.html
+++ b/events/viswiz.html
@@ -181,8 +181,11 @@
                     
                     <h3 class="round-heading">Round 3: Data Visualization (Final Round)</h3>
                     <ul class="rules-list">
+                        <li>Teams must complete the task within 40 MINUTES.</li>
                         <li>POINTS from this round will be added to the team's score.</li>
                         <li>Participants will be provided with a dataset and must construct a single narrative from the facts, drawing their own conclusions.</li>
+                        <li>The goal is to produce the most imaginative visualization and detailed narrative description of the data.</li>
+                        <li>Participants should work on tools such as Power BI, Tableau, Python, R, or SPSS (No AI tools).</li>
                     </ul>
                     
                     <div class="contact-info">
